connecting Netezza from Java